syntax = "proto3";

package chat;

service Chat {
  rpc GetResponse (ChatRequest) returns (ChatResponse);
}

message ChatRequest {
  string user_id = 1;
  string context_id = 2;
  string user_prompt = 3;
  string system_prompt = 4;
}

message ChatResponse {
  string user_id = 1;
  string context_id = 2;
  string reply = 3;
}